--- a/pom.xml
+++ b/pom.xml
@@ -43,4 +43,11 @@
         </dependency>
     </dependencies>
 
+    <exclusions>
+        <exclusion>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+        </exclusion>
+    </exclusions>
+
 </project>
