--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <github.global.server>github</github.global.server>
         <java.version>1.8</java.version>
+        <apache.tika.version>1.19</apache.tika.version>
     </properties>
 
     <dependencies>
@@ -41,6 +42,12 @@
             <groupId>com.final-project.automated-refactoring-tool</groupId>
             <artifactId>utils</artifactId>
             <version>${project.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.tika</groupId>
+            <artifactId>tika-core</artifactId>
+            <version>${apache.tika.version}</version>
         </dependency>
 
         <dependency>
